# StudySync

./: LICENSE  TO-DO.md
ss-backend/: .gitignore  hello.py  pyproject.toml
ss-backend/app/: database.py  main.py
ss-backend/app/api/: dependencies.py
ss-backend/app/api/endpoints/: notes.py
ss-backend/app/core/: config.py
ss-backend/app/models/: note.py  user.py
ss-backend/app/schemas/: note.py
ss-backend/app/services/: summarization.py
studysync/: package-lock.json  package.json
