[project]
name = "ss-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.11",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.43.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "uvicorn[standard]>=0.34.0",
]
